--- a/css/card.css
+++ b/css/card.css
@@ -26,7 +26,7 @@ body {
     background-color: #17141d;
     box-shadow: -1rem 0 3rem #000;
     border-radius: 16px;
-    transition: all 0.3s;
+    transition: all 0.3s ease-in;
 }
 
 .card:hover {
